@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-12-02 (SVN):
+    * Small tidy-up in hexen2 and hexenworld Makefiles.
+
+2011-12-02 (SVN):
     * engine/hexen2/menu.c: Changed some of the obvious if conditions to
       else if. Used the values returned by strlen() as cached in a variable
       when possible.
